infrastructure/remediation/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: remediation-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: remediation-service
  ports:
    - name: http
      port: 8002
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-broker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sandbox-broker
  ports:
    - name: https
      port: 443
      targetPort: https
